compiler/test/fail_compilation/e15876_5.d
/*
TEST_OUTPUT:
---
fail_compilation/e15876_5.d(16): Error: basic type expected, not `End of File`
---
*/
p[{alias
